--- a/01-html-css/portfolio-homepage/css/style.css
+++ b/01-html-css/portfolio-homepage/css/style.css
@@ -2,6 +2,46 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    font-family: 'Poppins', sans-serif;
+    color: #222;
+    line-height: 1.6;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+p a {
+    color:#007bff;
+    text-decoration: none;
+}
+
+p a:hover {
+    color:#ff5733;
+    text-decoration: underline;
+}
+
+a:hover {
+    transition: color 0.3s ease;
+}
+
+h1, h2, h3 {
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+p {
+    margin-bottom: 15px;
+}
+
+/* a, a:visited {
+    color: #007bff;
+}
+
+a:hover, a:focus {
+    color: #ff5733;
+} */
+
 .navbar {
     list-style: none;
     display: flex;
