--- a/01-html-css/portfolio-homepage/css/style.css
+++ b/01-html-css/portfolio-homepage/css/style.css
@@ -167,6 +167,39 @@ section h2 {
     font-size: 15px;
 }
 
+@media (max-width: 768px) {
+    body {
+        font-size: 15px;
+        padding: 10px;
+    }
 
+    h1 {
+        font-size: 2.2rem;
+    }
 
+    h2 {
+        font-size: 1.6rem;
+    }
 
+    h3 {
+        font-size: 1.2rem;
+    }
+
+    .navbar {
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+    }
+
+    .hero-image {
+        width: 150px;
+    }
+
+    p {
+        font-size: 16px;
+    }
+
+    ul, ol {
+        padding-left: 25px;
+    }
+}
