--- a/01-html-css/portfolio-homepage/css/style.css
+++ b/01-html-css/portfolio-homepage/css/style.css
@@ -174,7 +174,7 @@ section h2 {
     }
 
     h1 {
-        font-size: 2.2rem;
+        font-size: 2rem;
     }
 
     h2 {
@@ -189,10 +189,17 @@ section h2 {
         flex-direction: column;
         gap: 10px;
         align-items: center;
+        padding: 10px 0;
+    }
+
+    .navbar a {
+        font-size: 16px;
+        padding: 10px 14px;
     }
 
     .hero-image {
-        width: 150px;
+        width: 120px;
+        margin-top: 20px;
     }
 
     p {
@@ -201,5 +208,9 @@ section h2 {
 
     ul, ol {
         padding-left: 25px;
+    }
+
+    #home {
+        padding: 40px 20px;
     }
 }
